merapihkan dan menambahkan animasi swal

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#kontak"><b>Kontak Nuruddin Institute</b></a>
           </li>
           <li style="background-color: #f87113">
-            <a href="menu/login.html"><b>LOGIN</b></a>
+            <a href="menu/login.php"><b>LOGIN</b></a>
           </li>
         </ul>
       </nav>
